--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 												<textarea name="message" placeholder="Message" rows="6"></textarea>
 											</div>
 											<div class="col-12">
-												<input type="submit" value="Send Message" />
+												<input type="submit" value="Send Message" angelicaavellanedaleiva0@gmail.com/>
 											</div>
 										</div>
 									</div>
