--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 												<textarea name="message" placeholder="Message" rows="6"></textarea>
 											</div>
 											<div class="col-12">
-												<input type="submit" value="Send Message" angelicaavellanedaleiva0@gmail.com/>
+												<input type="submit" value="Send Message"/>
+												<form method="post" action="mailto:angelicaavellanedaleiva0@gmail.com"></form>
 											</div>
 										</div>
 									</div>
