--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 												<textarea name="message" placeholder="Message" rows="6"></textarea>
 											</div>
 											<div class="col-12">
-												<input type="submit" value="Send Message"/>
-												<form method="post" action="mailto:angelicaavellanedaleiva0@gmail.com"></form>
+												<input type="submit" value="Send Message"href="mailto:angelicaavellanedaleiva0@gmail.com"/>
 											</div>
 										</div>
 									</div>
